cmaismenosParser.py
# Generated from cmaismenos.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cmaismenosParser ( Parser ):

    grammarFileName = "cmaismenos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'i'", "'s'", "'=='", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "';'", "'('", "')'", "'{'", "'}'", "'rd'", 
                     "'pt'", "'if'", "'el'", "'ei'", "'do'", "'wl'", "'and'", 
                     "'or'", "'!'", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "TIPO_INT", "TIPO_STR", "IGUAL", "ATRIBUICAO", 
                      "SOMA", "SUBTRACAO", "MULTIPLICACAO", "DIVISAO", "PONTO_VIRGULA", 
                      "ABRE_PARENTESES", "FECHA_PARENTESES", "ABRE_CHAVES", 
                      "FECHA_CHAVES", "RD", "PT", "IF", "EL", "EI", "DO", 
                      "WL", "AND", "OR", "NOT", "MENOR", "MAIOR", "STRING", 
                      "ID", "NUMERO", "COMENTARIO_LINHA", "COMENTARIO_BLOCO", 
                      "ESPACO" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_atribuicao = 2
    RULE_declaracao = 3
    RULE_declaracaoInt = 4
    RULE_declaracaoStr = 5
    RULE_entrada = 6
    RULE_saida = 7
    RULE_condicional = 8
    RULE_repeticao = 9
    RULE_bloco = 10
    RULE_expressao = 11
    RULE_termo = 12
    RULE_fator = 13
    RULE_expressaoLogica = 14
    RULE_termoLogico = 15
    RULE_comparacao = 16

    ruleNames =  [ "programa", "comando", "atribuicao", "declaracao", "declaracaoInt", 
                   "declaracaoStr", "entrada", "saida", "condicional", "repeticao", 
                   "bloco", "expressao", "termo", "fator", "expressaoLogica", 
                   "termoLogico", "comparacao" ]

    EOF = Token.EOF
    TIPO_INT=1
    TIPO_STR=2
    IGUAL=3
    ATRIBUICAO=4
    SOMA=5
    SUBTRACAO=6
    MULTIPLICACAO=7
    DIVISAO=8
    PONTO_VIRGULA=9
    ABRE_PARENTESES=10
    FECHA_PARENTESES=11
    ABRE_CHAVES=12
    FECHA_CHAVES=13
    RD=14
    PT=15
    IF=16
    EL=17
    EI=18
    DO=19
    WL=20
    AND=21
    OR=22
    NOT=23
    MENOR=24
    MAIOR=25
    STRING=26
    ID=27
    NUMERO=28
    COMENTARIO_LINHA=29
    COMENTARIO_BLOCO=30
    ESPACO=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cmaismenosParser.EOF, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmaismenosParser.ComandoContext)
            else:
                return self.getTypedRuleContext(cmaismenosParser.ComandoContext,i)


        def getRuleIndex(self):
            return cmaismenosParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = cmaismenosParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 135380998) != 0):
                self.state = 34
                self.comando()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(cmaismenosParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self):
            return self.getTypedRuleContext(cmaismenosParser.DeclaracaoContext,0)


        def entrada(self):
            return self.getTypedRuleContext(cmaismenosParser.EntradaContext,0)


        def saida(self):
            return self.getTypedRuleContext(cmaismenosParser.SaidaContext,0)


        def condicional(self):
            return self.getTypedRuleContext(cmaismenosParser.CondicionalContext,0)


        def repeticao(self):
            return self.getTypedRuleContext(cmaismenosParser.RepeticaoContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(cmaismenosParser.AtribuicaoContext,0)


        def getRuleIndex(self):
            return cmaismenosParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = cmaismenosParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.declaracao()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.entrada()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.saida()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.condicional()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.repeticao()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 6)
                self.state = 47
                self.atribuicao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(cmaismenosParser.ID, 0)

        def ATRIBUICAO(self):
            return self.getToken(cmaismenosParser.ATRIBUICAO, 0)

        def expressao(self):
            return self.getTypedRuleContext(cmaismenosParser.ExpressaoContext,0)


        def PONTO_VIRGULA(self):
            return self.getToken(cmaismenosParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = cmaismenosParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(cmaismenosParser.ID)
            self.state = 51
            self.match(cmaismenosParser.ATRIBUICAO)
            self.state = 52
            self.expressao()
            self.state = 53
            self.match(cmaismenosParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoInt(self):
            return self.getTypedRuleContext(cmaismenosParser.DeclaracaoIntContext,0)


        def declaracaoStr(self):
            return self.getTypedRuleContext(cmaismenosParser.DeclaracaoStrContext,0)


        def getRuleIndex(self):
            return cmaismenosParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = cmaismenosParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.declaracaoInt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.declaracaoStr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoIntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO_INT(self):
            return self.getToken(cmaismenosParser.TIPO_INT, 0)

        def ID(self):
            return self.getToken(cmaismenosParser.ID, 0)

        def ATRIBUICAO(self):
            return self.getToken(cmaismenosParser.ATRIBUICAO, 0)

        def expressao(self):
            return self.getTypedRuleContext(cmaismenosParser.ExpressaoContext,0)


        def PONTO_VIRGULA(self):
            return self.getToken(cmaismenosParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_declaracaoInt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoInt" ):
                listener.enterDeclaracaoInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoInt" ):
                listener.exitDeclaracaoInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoInt" ):
                return visitor.visitDeclaracaoInt(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoInt(self):

        localctx = cmaismenosParser.DeclaracaoIntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracaoInt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(cmaismenosParser.TIPO_INT)
            self.state = 60
            self.match(cmaismenosParser.ID)
            self.state = 61
            self.match(cmaismenosParser.ATRIBUICAO)
            self.state = 62
            self.expressao()
            self.state = 63
            self.match(cmaismenosParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoStrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO_STR(self):
            return self.getToken(cmaismenosParser.TIPO_STR, 0)

        def ID(self):
            return self.getToken(cmaismenosParser.ID, 0)

        def ATRIBUICAO(self):
            return self.getToken(cmaismenosParser.ATRIBUICAO, 0)

        def STRING(self):
            return self.getToken(cmaismenosParser.STRING, 0)

        def PONTO_VIRGULA(self):
            return self.getToken(cmaismenosParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_declaracaoStr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoStr" ):
                listener.enterDeclaracaoStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoStr" ):
                listener.exitDeclaracaoStr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoStr" ):
                return visitor.visitDeclaracaoStr(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoStr(self):

        localctx = cmaismenosParser.DeclaracaoStrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracaoStr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(cmaismenosParser.TIPO_STR)
            self.state = 66
            self.match(cmaismenosParser.ID)
            self.state = 67
            self.match(cmaismenosParser.ATRIBUICAO)
            self.state = 68
            self.match(cmaismenosParser.STRING)
            self.state = 69
            self.match(cmaismenosParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntradaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RD(self):
            return self.getToken(cmaismenosParser.RD, 0)

        def ABRE_PARENTESES(self):
            return self.getToken(cmaismenosParser.ABRE_PARENTESES, 0)

        def ID(self):
            return self.getToken(cmaismenosParser.ID, 0)

        def FECHA_PARENTESES(self):
            return self.getToken(cmaismenosParser.FECHA_PARENTESES, 0)

        def PONTO_VIRGULA(self):
            return self.getToken(cmaismenosParser.PONTO_VIRGULA, 0)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_entrada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrada" ):
                listener.enterEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrada" ):
                listener.exitEntrada(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntrada" ):
                return visitor.visitEntrada(self)
            else:
                return visitor.visitChildren(self)




    def entrada(self):

        localctx = cmaismenosParser.EntradaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_entrada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(cmaismenosParser.RD)
            self.state = 72
            self.match(cmaismenosParser.ABRE_PARENTESES)
            self.state = 73
            self.match(cmaismenosParser.ID)
            self.state = 74
            self.match(cmaismenosParser.FECHA_PARENTESES)
            self.state = 75
            self.match(cmaismenosParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PT(self):
            return self.getToken(cmaismenosParser.PT, 0)

        def ABRE_PARENTESES(self):
            return self.getToken(cmaismenosParser.ABRE_PARENTESES, 0)

        def FECHA_PARENTESES(self):
            return self.getToken(cmaismenosParser.FECHA_PARENTESES, 0)

        def PONTO_VIRGULA(self):
            return self.getToken(cmaismenosParser.PONTO_VIRGULA, 0)

        def expressao(self):
            return self.getTypedRuleContext(cmaismenosParser.ExpressaoContext,0)


        def STRING(self):
            return self.getToken(cmaismenosParser.STRING, 0)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_saida

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaida" ):
                listener.enterSaida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaida" ):
                listener.exitSaida(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaida" ):
                return visitor.visitSaida(self)
            else:
                return visitor.visitChildren(self)




    def saida(self):

        localctx = cmaismenosParser.SaidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_saida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(cmaismenosParser.PT)
            self.state = 78
            self.match(cmaismenosParser.ABRE_PARENTESES)
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 27, 28]:
                self.state = 79
                self.expressao()
                pass
            elif token in [26]:
                self.state = 80
                self.match(cmaismenosParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 83
            self.match(cmaismenosParser.FECHA_PARENTESES)
            self.state = 84
            self.match(cmaismenosParser.PONTO_VIRGULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(cmaismenosParser.IF, 0)

        def expressaoLogica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmaismenosParser.ExpressaoLogicaContext)
            else:
                return self.getTypedRuleContext(cmaismenosParser.ExpressaoLogicaContext,i)


        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmaismenosParser.BlocoContext)
            else:
                return self.getTypedRuleContext(cmaismenosParser.BlocoContext,i)


        def EL(self):
            return self.getToken(cmaismenosParser.EL, 0)

        def EI(self, i:int=None):
            if i is None:
                return self.getTokens(cmaismenosParser.EI)
            else:
                return self.getToken(cmaismenosParser.EI, i)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = cmaismenosParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(cmaismenosParser.IF)
            self.state = 87
            self.expressaoLogica()
            self.state = 88
            self.bloco()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 89
                self.match(cmaismenosParser.EL)
                self.state = 90
                self.bloco()


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 93
                self.match(cmaismenosParser.EI)
                self.state = 94
                self.expressaoLogica()
                self.state = 95
                self.bloco()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WL(self):
            return self.getToken(cmaismenosParser.WL, 0)

        def expressaoLogica(self):
            return self.getTypedRuleContext(cmaismenosParser.ExpressaoLogicaContext,0)


        def DO(self):
            return self.getToken(cmaismenosParser.DO, 0)

        def bloco(self):
            return self.getTypedRuleContext(cmaismenosParser.BlocoContext,0)


        def getRuleIndex(self):
            return cmaismenosParser.RULE_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeticao" ):
                listener.enterRepeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeticao" ):
                listener.exitRepeticao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeticao" ):
                return visitor.visitRepeticao(self)
            else:
                return visitor.visitChildren(self)




    def repeticao(self):

        localctx = cmaismenosParser.RepeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_repeticao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(cmaismenosParser.WL)
            self.state = 103
            self.expressaoLogica()
            self.state = 104
            self.match(cmaismenosParser.DO)
            self.state = 105
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_CHAVES(self):
            return self.getToken(cmaismenosParser.ABRE_CHAVES, 0)

        def FECHA_CHAVES(self):
            return self.getToken(cmaismenosParser.FECHA_CHAVES, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmaismenosParser.ComandoContext)
            else:
                return self.getTypedRuleContext(cmaismenosParser.ComandoContext,i)


        def getRuleIndex(self):
            return cmaismenosParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = cmaismenosParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(cmaismenosParser.ABRE_CHAVES)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 135380998) != 0):
                self.state = 108
                self.comando()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(cmaismenosParser.FECHA_CHAVES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmaismenosParser.TermoContext)
            else:
                return self.getTypedRuleContext(cmaismenosParser.TermoContext,i)


        def SOMA(self, i:int=None):
            if i is None:
                return self.getTokens(cmaismenosParser.SOMA)
            else:
                return self.getToken(cmaismenosParser.SOMA, i)

        def SUBTRACAO(self, i:int=None):
            if i is None:
                return self.getTokens(cmaismenosParser.SUBTRACAO)
            else:
                return self.getToken(cmaismenosParser.SUBTRACAO, i)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao" ):
                return visitor.visitExpressao(self)
            else:
                return visitor.visitChildren(self)




    def expressao(self):

        localctx = cmaismenosParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.termo()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 117
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 118
                self.termo()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmaismenosParser.FatorContext)
            else:
                return self.getTypedRuleContext(cmaismenosParser.FatorContext,i)


        def MULTIPLICACAO(self, i:int=None):
            if i is None:
                return self.getTokens(cmaismenosParser.MULTIPLICACAO)
            else:
                return self.getToken(cmaismenosParser.MULTIPLICACAO, i)

        def DIVISAO(self, i:int=None):
            if i is None:
                return self.getTokens(cmaismenosParser.DIVISAO)
            else:
                return self.getToken(cmaismenosParser.DIVISAO, i)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermo" ):
                return visitor.visitTermo(self)
            else:
                return visitor.visitChildren(self)




    def termo(self):

        localctx = cmaismenosParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_termo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.fator()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==8:
                self.state = 125
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 126
                self.fator()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self):
            return self.getToken(cmaismenosParser.NUMERO, 0)

        def ID(self):
            return self.getToken(cmaismenosParser.ID, 0)

        def ABRE_PARENTESES(self):
            return self.getToken(cmaismenosParser.ABRE_PARENTESES, 0)

        def expressao(self):
            return self.getTypedRuleContext(cmaismenosParser.ExpressaoContext,0)


        def FECHA_PARENTESES(self):
            return self.getToken(cmaismenosParser.FECHA_PARENTESES, 0)

        def getRuleIndex(self):
            return cmaismenosParser.RULE_fator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFator" ):
                listener.enterFator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFator" ):
                listener.exitFator(self)
